--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/*@import url('https://fonts.googleapis.com/css?family=Merriweather:400,900,900i');*/
+/*@import url('images/https://fonts.googleapis.com/css?family=Merriweather:400,900,900i');*/
 
 body {
   margin: 0;
@@ -19,7 +19,7 @@ body:before{
   content:'';
   z-index: -1;
   position: absolute;
-  background-image:url('bg.svg');
+  background-image:url('images/bg.svg');
   background-size: 80%;
   background-position: bottom right;
   background-repeat: no-repeat;
@@ -107,6 +107,19 @@ h1, h2, h3, h4{
   width:auto;
 }
 
+#offline{
+  display: block;
+  position: fixed;
+  bottom:10px;
+  right:10px;
+  background:#e74c3c;
+  color:#fff;
+  border-radius: 5%;
+  font-size: 10px;
+  padding:5px;
+  transition: opacity 1s;
+}
+
 h1.title {
   color: #333;
   text-transform: capitalize;
@@ -149,7 +162,7 @@ h1.title {
   content:'';
   z-index: -1;
   position: absolute;
-  background-image:url('bg2.svg');
+  /*background-image:url('images/bg2.svg');*/
   background-size: 100%;
   background-position: top left;
   background-repeat: no-repeat;
