--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body:before{
 }
 
 h1, h2, h3, h4{
-  font-family: 'Inconsolata', arial, sans-serif;
+  font-family: times, serif;
   font-weight: 900;
 }
 
@@ -68,6 +68,53 @@ h1, h2, h3, h4{
   width: 100%;
   grid-column-gap: 5%;
   font-size:18px;
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+}
+
+.nav .logo{
+  margin:0 15px;
+  padding:15px 0;
+  overflow:hidden;
+  display: block;
+}
+
+.nav .logo a{
+  position: relative;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 28px;
+  font-family: times, serif;
+  background:linear-gradient(to right bottom,rgba(41,8,48,.97),rgba(82,65,143,.97) 50%,rgba(82,65,143,.97));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.nav .logo a:after{
+  content:'';
+  position: absolute;
+  left:0;
+  bottom:-5px;
+  width:0%;
+  height:4px;
+  transition: 0.6s ease-in-out;
+  background:linear-gradient(to right bottom,rgba(41,8,48,.97),rgba(82,65,143,.97) 50%,rgba(82,65,143,.97));
+}
+
+.nav .logo a:hover:after{
+  width:100%;
+  transform-origin: center;
+  transition: 0.6s ease-in-out;
+}
+
+.nav .logo svg{
+  width:30px;
+  height:30px;
+  margin-bottom: -5px;
+  padding-left:5px;
+  /*padding:3px;
+  background:#fff;
+  border-radius: 50%;*/
 }
 
 .nav ul {
@@ -76,6 +123,9 @@ h1, h2, h3, h4{
   grid-gap: 10px;
   grid-auto-columns: auto;
   list-style: none;
+}
+
+.nav ul li:first-of-type{
 }
 
 .nav ul li a{
@@ -130,7 +180,7 @@ h1.title {
 .home{
   display: grid;
   width: 100%;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr;
 }
 
 .home p{
@@ -138,7 +188,7 @@ h1.title {
 }
 
 .home h1.title{
-  font-size: 4.5rem;
+  font-size: 5.5rem;
   background:linear-gradient(to right bottom,rgba(41,8,48,.97),rgba(82,65,143,.97) 50%,rgba(114,183,227,.97));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
